[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Ocean/Ocean Enemies/Enemy_Jellyfish.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0
height = 16.0

[node name="Enemy_Jellyfish" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.921569, 0, 1, 1 )
scale = Vector2( 0.7, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]

[node name="WaitTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
